@@ -10,6 +10,7 @@ Bug fixes:
   on the person, not when it tries to use it.
 - The day parameter for autoBreakTime is no longer case sensitive.
 - Fix a routing problem which causes Kore to walk back and forth.
+- Various attackComboSlot bug fixes.
 
 New features:
 - statsAddAuto will now print a message when it increases a stat.
